export type RootStackParamList = {
  Onboarding: undefined;
  Auth: undefined;
  Main: undefined;
};

export type AuthStackParamList = {
  Login: undefined;
  Register: undefined;
  ForgotPassword: undefined;
};

export type MainTabParamList = {
  Home: undefined;
  Expenses: undefined;
  Income: undefined;
  Budget: undefined;
  Profile: undefined;
};

export type OnboardingStackParamList = {
  Welcome: undefined;
  UserType: undefined;
  PersonalInfo: undefined;
  FinancialInfo: undefined;
  Main: undefined;
}; 